name:                funblog
version:             0.2.0.0
synopsis:            Blog written in Haskell
description:         A simple yet powerfull blog software
homepage:            https://github.com/agrafix/funblog
license:             Apache-2.0
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2014 - 2015 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable funblog
  main-is:             Bootstrap.hs
  build-depends:
                       Spock ==0.7.*,
                       Spock-digestive ==0.1.*,
                       aeson ==0.8.*,
                       base >= 4 && < 5,
                       base16-bytestring ==0.1.*,
                       blaze-bootstrap ==0.1.*,
                       blaze-html ==0.7.*,
                       bytestring ==0.10.*,
                       configurator ==0.3.*,
                       cryptohash ==0.11.*,
                       digestive-bootstrap ==0.1.*,
                       digestive-functors ==0.7.*,
                       http-types ==0.8.*,
                       monad-logger ==0.3.*,
                       mtl,
                       persistent ==2.1.*,
                       persistent-sqlite ==2.1.*,
                       persistent-template ==2.1.*,
                       random,
                       resourcet,
                       stm,
                       text >=0.11.3.1 && <1.3,
                       time ==1.4.*,
                       unordered-containers,
                       wai-middleware-static ==0.6.*,
                       word8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/agrafix/funblog.git
